# tiralabra

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  pyproject.toml  readme.md
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: .coveragerc  app.py  nn.py  nn_parameters.npz
src/templates/: index.html
src/tests/: nn_test.py
