[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Iida Häkkinen <iida.hakkinen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
